--- a/config/locales/en/en.yml
+++ b/config/locales/en/en.yml
@@ -33,6 +33,7 @@ en:
   hello: "Hello world"
   available: 'Available vehicles'
   language: 'Language'
+  enter_address: Enter address
   languages:
     en: 'English'
     bs: 'Bosnian'
@@ -48,6 +49,8 @@ en:
     search: 'Search'
   datetime:
     select: 'Select date'
+    select_from: 'Select date from'
+    select_to: 'Select date to'
   locale_change: "Language successfully changed to %{language}"
 
 
