--- a/config/locales/bs/devise.bs.yml
+++ b/config/locales/bs/devise.bs.yml
@@ -5,31 +5,31 @@ bs:
     confirmations:
       confirmed: "Vaša e-mail adresa je uspješno potvrdjena."
       send_instructions: "Dobiti ćete email intrukcije kako potvriditi vaš račun uskoro."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      send_paranoid_instructions: " Ako se vaša email adresa nalazi u našoj databazi dobit ćete mail sa instrukcijama kako potvrditi vaš račun."
     failure:
       already_authenticated: "Već ste prijavljeni."
       inactive: "Račun vam još nije aktivan."
-      invalid: "Invalid %{authentication_keys} or password."
+      invalid: "Netačan %{authentication_keys} ili lozinka."
       locked: "Vaš račun je zaključan."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
+      last_attempt: "Imate još jedan pokušaj prije nego blokiramo vaš račun."
+      not_found_in_database: "Netačan %{authentication_keys} ili lozinka."
+      timeout: "Vaša sesija je istekla. Ponovo se prijavite da biste nastavili."
       unauthenticated: "Morate se prijaviti prije nego sto mozete nastaviti."
       unconfirmed: "Morate potvrditi e-mail adresu prije nego nastavite."
     mailer:
       confirmation_instructions:
-        subject: "Instrukcije za potvrdu"
+        subject: "Instrukcije za potvrdu email adrese"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Instrukcije za resetovanje šifre"
       unlock_instructions:
-        subject: "Instrukcije za otključavanje"
+        subject: "Instrukcije za otključavanje email adrese"
       email_changed:
-        subject: "Email promjenjen."
+        subject: "Email promijenjen."
       password_change:
-        subject: "Lozinka promjenjena."
+        subject: "Lozinka promijenjena."
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "Nismo vas mogli potvrditi iz %{kind} zbog \"%{reason}\"."
+      success: "Uspješno potvrdjeno %{kind} račun."
     passwords:
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
       send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
