--- a/config/locales/bs/mailer.bs.yml
+++ b/config/locales/bs/mailer.bs.yml
@@ -4,3 +4,7 @@ bs:
       successfull: 'Imate novu rezervaciju od %{user_name} za %{post_title}'
       see_reservation: 'Pogledajte rezervaciju'
       upcoming_reservation: 'Rezervacija za %{title}'
+    registration:
+      welcome: 'Dobrodošli %{email}'
+      message: 'Možete potvrditi račun klikom na link ispod:'
+      confirm: 'Potvrdi moj račun'
