--- a/config/locales/bs/profile.bs.yml
+++ b/config/locales/bs/profile.bs.yml
@@ -19,3 +19,7 @@ bs:
     info_confirm: 'Kada potvrdite, bit cete preusmjereni na plaćanje 2% od ukupnog iznosa.'
     removed_favorite: 'Uspješno izbrisano iz omiljenih vozila'
     error: 'Desila se greska'
+    upload_post: 'Postavi novo vozilo'
+    no_posts: 'Još niste postavili nijedno vozilo'
+    no_reservations: 'Niste još napravili niti jednu rezervaciju. Šta čekate...'
+    no_incoming: 'Niko nije rezervisao vaše vozilo. Još...'
