added translations for search, refactores post show, added new car logo svgs

--- a/config/locales/bs/bs.yml
+++ b/config/locales/bs/bs.yml
@@ -22,3 +22,5 @@ bs:
     select_to: 'Do datuma'
   locale_change: "Jezik je uspjesno promijenjen u %{language}"
   edit: 'Uredi'
+  from: 'Od'
+  to: 'Do'
