updated post list to fit mobile platforms, some translations added

--- a/config/locales/bs/search.bs.yml
+++ b/config/locales/bs/search.bs.yml
@@ -55,3 +55,4 @@ bs:
       fiat: 'Fiat'
       lamborghini: 'Lamborghini'
       alfa_romeo: 'Alfa Romeo'
+    no_vehicles_for_filter: 'Nema vozila sa tim opcijama'
