--- a/config/locales/bs/profile.bs.yml
+++ b/config/locales/bs/profile.bs.yml
@@ -23,3 +23,7 @@ bs:
     no_posts: 'Još niste postavili nijedno vozilo'
     no_reservations: 'Niste još napravili niti jednu rezervaciju. Šta čekate...'
     no_incoming: 'Niko nije rezervisao vaše vozilo. Još...'
+    confirm?: 'Potvrditi?'
+    cancel: 'Otkazati'
+    delete_reservation: 'Obrisati rezervaciju?'
+    confirm_reservation: "Potvrdi rezervaciju od %{user_name} za objavu %{post_title}?"
