added tooltip to main info on post#show

--- a/config/locales/bs/post.bs.yml
+++ b/config/locales/bs/post.bs.yml
@@ -22,3 +22,9 @@ bs:
     new_reservation_crated: 'Napravljena je nova rezervacija'
     reservation_deleted: 'Rezervacija je uspjesno izbrisana'
     delete_reservation?: 'Da li stvarno želite izbrisati rezervaciju?'
+    horse_power: 'Konjske snage'
+    fuel: 'Gorivo'
+    production_year: 'Godište'
+    milage: 'Kilometraža'
+    number_of_seats: 'Broj sjedišta'
+    transmission: 'Transmisija'
