--- a/config/locales/en/post.en.yml
+++ b/config/locales/en/post.en.yml
@@ -22,3 +22,9 @@ en:
     new_reservation_crated: 'New reservation successfully created'
     reservation_deleted: 'Reservation successfully deleted'
     delete_reservation?: 'Do you really want to delete time reservation?'
+    horse_power: 'Horse power'
+    fuel: 'Fuel'
+    production_year: 'Production year'
+    milage: 'Milage'
+    number_of_seats: 'Number of seats'
+    transmission: 'Transmission'
