post controller stuff, reserve button, added confirmation of reservation

--- a/config/locales/bs/message.bs.yml
+++ b/config/locales/bs/message.bs.yml
@@ -6,7 +6,7 @@ bs:
     can_not_see: 'Poruka se nije mogla učitati.'
     all: 'Sve'
     unread: 'Nepročitane'
-    sent: 'Poslato'
+    sent: 'Poruka uspješno poslata.'
     datatable:
       to: 'Primalac'
       message: 'Poruka'
