added frineldy id to users, data migrate gem added, added language to users#edit

--- a/config/locales/bs/active_record.bs.yml
+++ b/config/locales/bs/active_record.bs.yml
@@ -26,6 +26,7 @@ bs:
         is_admin: 'Je admin'
         gender: 'Spol'
         dob: 'Datum rodjenja'
+        locale: 'Jezik'
       address:
         address: 'Naziv ulice'
         city: 'Grad'
