added real data migration gem, added UI effects to post#show, bug fixes

--- a/config/locales/bs/post.bs.yml
+++ b/config/locales/bs/post.bs.yml
@@ -10,8 +10,8 @@ bs:
     images: 'Slike'
     reserve: 'Rezerviši'
     check: 'Provjeri'
-    car_available: 'Auto je dostupno u tom periodu'
-    car_unavailable: 'Auto nije dostupno u tom periodu'
+    car_available: 'Vozilo je dostupno u tom periodu. '
+    car_unavailable: 'Vozilo nije dostupno u tom periodu. Pokušajte promjeniti datum.'
     have_reservation: "Imate %{reservation_confirmed} rezervaciju za ovu objavu"
     pending: 'Poslatu'
     confirmed: 'Potvrdjenu'
