--- a/config/locales/bs/post.bs.yml
+++ b/config/locales/bs/post.bs.yml
@@ -28,3 +28,4 @@ bs:
     milage: 'Kilometraža'
     number_of_seats: 'Broj sjedišta'
     transmission: 'Transmisija'
+    enter_date: 'Unesi datum'
