--- a/config/locales/bs/bs.yml
+++ b/config/locales/bs/bs.yml
@@ -14,6 +14,7 @@ bs:
     account: 'Račun'
     logout: 'Odjaviti se'
     profile: 'Profil'
+    money: 'Novčići'
   buttons:
     search: 'Traži'
   datetime:
