--- a/config/locales/bs/user.bs.yml
+++ b/config/locales/bs/user.bs.yml
@@ -17,6 +17,9 @@ bs:
     no_posts: 'Korisnik još nije objavio niti jedno vozilo...'
     phone_number: 'Broj telefona'
     total_uploaded: 'Ukupan broj objava'
+    confirm_password_to_update: 'Potvrdite lozinku da biste ažurirali račun'
+    enter_password_to_confirm: 'Unesite lozinku da biste potvrdili izmjene'
+    update_user: 'Izvršite izmjene računa'
     messaging:
       subject: 'Naslov'
       your_message: 'Vaša poruka'
