--- a/config/locales/en/en.yml
+++ b/config/locales/en/en.yml
@@ -45,6 +45,7 @@ en:
     log_out: 'Logout'
     account: 'Account'
     profile: 'Profile'
+    money: 'Money'
   buttons:
     search: 'Search'
   datetime:
