--- a/config/locales/en/user.en.yml
+++ b/config/locales/en/user.en.yml
@@ -16,9 +16,13 @@ en:
     no_posts: 'User did not uplaod any posts yet.'
     phone_number: 'Phone number'
     total_uploaded: 'Total number of posts'
+    confirm_password_to_update: 'Confirm password to update user'
+    enter_password_to_confirm: 'Enter your password to confirm changes'
+    update_user: 'Update User'
     messaging:
       subject: 'Subject'
       your_message: 'Your message'
       send: 'Send'
       send_message_to: 'Send message to %{user}'
+
 
