made reservations confirmations work withtout a user signed in

--- a/config/locales/bs/bs.yml
+++ b/config/locales/bs/bs.yml
@@ -14,7 +14,7 @@ bs:
     account: 'Račun'
     logout: 'Odjaviti se'
     profile: 'Profil'
-    money: 'Novčići'
+    ducats: 'Dukati'
   buttons:
     search: 'Traži'
   datetime:
