--- a/config/locales/en/post.en.yml
+++ b/config/locales/en/post.en.yml
@@ -29,3 +29,4 @@ en:
     number_of_seats: 'Number of seats'
     transmission: 'Transmission'
     enter_date: 'Enter date'
+    publish_new: 'Publish new post'
