--- a/config/locales/bs/reservation.bs.yml
+++ b/config/locales/bs/reservation.bs.yml
@@ -8,6 +8,7 @@ bs:
     price: 'Cijena'
     for_total: ' za ukupno '
     number_days: '%{number} dana'
+    almost_done: 'Još malo pa gotovo. Unesite svoje podatke'
     button:
       confirm: 'Potvrdite rezervaciju'
 
