--- a/config/locales/en/devise.en.yml
+++ b/config/locales/en/devise.en.yml
@@ -11,6 +11,7 @@ en:
       inactive: "Your account is not activated yet."
       invalid: "Invalid %{authentication_keys} or password."
       locked: "Your account is locked."
+      email_maybe_taken: 'The email is maybe taken or another error happened. Try logging in.'
       last_attempt: "You have one more attempt before your account is locked."
       not_found_in_database: "Invalid %{authentication_keys} or password."
       timeout: "Your session expired. Please sign in again to continue."
