--- a/config/locales/en/user.en.yml
+++ b/config/locales/en/user.en.yml
@@ -1,5 +1,6 @@
 en:
   user:
+    created: 'User created successfully'
     sign_up: 'Sign up'
     sign_in: 'Sign in'
     forgot_password: 'Forgot password'
@@ -24,5 +25,11 @@ en:
       your_message: 'Your message'
       send: 'Send'
       send_message_to: 'Send message to %{user}'
+    first_name: 'First name'
+    last_name: 'Last name'
+    email: 'Email'
+    password: 'Password'
+    password_confimation: 'Password confirmation'
+    phone_number: 'Phone number'
 
 
