edit post locale

--- a/config/locales/en/post.en.yml
+++ b/config/locales/en/post.en.yml
@@ -31,7 +31,7 @@ en:
     enter_date: 'Enter date'
     publish_new: 'Publish new post'
     use_same_address: 'Use same address as user'
-    edit:
+    edit_pane:
       main_info: 'Main info'
       other_info: 'Other info'
       photos: 'Photos'
