--- a/config/locales/bs/post.bs.yml
+++ b/config/locales/bs/post.bs.yml
@@ -31,7 +31,7 @@ bs:
     enter_date: 'Unesi datum'
     publish_new: 'Objavi vozilo'
     use_same_address: 'Koristi istu adresu kao i korisnik'
-    edit:
+    edit_pane:
       main_info: 'Glavni podaci'
       other_info: 'Ostali podaci'
       photos: 'Slike'
