enabled purchase creation on payment approve

--- a/config/locales/bs/active_record.bs.yml
+++ b/config/locales/bs/active_record.bs.yml
@@ -43,3 +43,6 @@ bs:
       conversation:
         sender_id: 'Pošiljalac'
         receiver_id: 'Primalac'
+      purchase:
+        purchase_item_id: 'Paketi'
+
