--- a/config/locales/bs/ducat.bs.yml
+++ b/config/locales/bs/ducat.bs.yml
@@ -3,3 +3,4 @@ bs:
     current_count: 'Imate ukupno <i class="mr-2"> %{count} </i> <i class="fa fa-coins text-warning mb-3"></i> dukata'
     payment_method: 'Način plaćanja'
     charges: 'Dopune'
+    add_ducats: 'Dopuni dukate'
