--- a/config/locales/en/ducat.en.yml
+++ b/config/locales/en/ducat.en.yml
@@ -4,3 +4,4 @@ en:
     payment_method: 'Payment method'
     charges: 'Charges'
     add_ducats: 'Add ducats'
+    what_are_ducats: 'What are ducats?'
