--- a/config/locales/en/purchase.en.yml
+++ b/config/locales/en/purchase.en.yml
@@ -2,3 +2,8 @@ en:
   purchase:
     success: 'Purchase was made succesfully.'
     error: 'Error occured while making payment.'
+    statuses:
+      pending: 'Pending'
+      failed: 'Failed'
+      paypal_executed: 'Paypal executed'
+      paid: 'Paid'
