set up datatables, added datatable for purchases

--- a/config/locales/bs/purchase.bs.yml
+++ b/config/locales/bs/purchase.bs.yml
@@ -7,4 +7,8 @@ bs:
       failed: 'Neuspješno'
       paypal_executed: 'Izvrešena preko Paypala'
       paid: 'Plaćeno'
+    columns:
+      payment_date: 'Datum placanja'
+      status: 'Status'
+      title: 'Naslov'
 
