added datetime w week format, some translations and response messages,
also added validation for reserving when ducat count of user is smaller than ducat count for reservation
added some styling to profile index page

--- a/config/locales/bs/bs.yml
+++ b/config/locales/bs/bs.yml
@@ -32,3 +32,13 @@ bs:
   days_ago: "prije %{number} dana"
   next: 'Sljedeće'
   submitting: 'Spašava se...'
+  days:
+    monday: 'Ponedjeljak'
+    tuesday: 'Utorak'
+    wednesday: 'Srijeda'
+    thursday: 'Četvrtak'
+    friday: 'Petak'
+    saturday: 'Subota'
+    sunday: 'Nedjelja'
+
+
